# administration

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  sqlx-data.json
.github/workflows/: build.yml
config/: Cargo.toml
config/src/: insta.rs  lib.rs
entity/: Cargo.toml
entity/src/: blog_post.rs  build.rs  lib.rs  picture.rs  product.rs
image_processing/: Cargo.toml
image_processing/src/: crop.rs  image.rs  lib.rs  region.rs
insta_feed/: Cargo.toml
insta_feed/src/: feed.rs  main.rs
insta_sync/: Cargo.toml
insta_sync/src/: download.rs  insta.rs  lib.rs  main.rs  types.rs
macros/: Cargo.toml
macros/src/: clear.rs  consts.rs  get_all.rs  get_by_id.rs  insert.rs  insert_all.rs  insert_or_update.rs  lib.rs
migrations/: 20220912170957_init.down.sql  20220912170957_init.up.sql  20220912170957_products.up.sql  20220912182743_pictures.down.sql  20220912182743_pictures.up.sql  20220914115025_products_index.down.sql  20220914115025_products_index.up.sql  20220916161849_picture_order.down.sql  20220916161849_picture_order.up.sql  20220917100644_blog_post.down.sql  20220917100644_blog_post.up.sql  20220918073214_entity_order.down.sql  20220918073214_entity_order.up.sql  20220918130821_build.down.sql  20220918130821_build.up.sql  20221002191240_entity_order_audit.down.sql  20221002191240_entity_order_audit.up.sql  20221002192841_product_pictures_audit.down.sql  20221002192841_product_pictures_audit.up.sql
src/: builder.rs  cached_session_service.rs  feed.rs  guard.rs  image_storage.rs  main.rs  publication_status.rs  tasks.rs  test_utils.rs
src/entity/: blog_post.rs  crop.rs  mod.rs  multi_lang.rs  picture.rs  product.rs  user.rs
src/graphql_schema/: build_reolver.rs  mod.rs  mutations.rs  product_resolver.rs  queries.rs  subscriptions.rs
src/graphql_schema/snapshots/: tyorka_admin__graphql_schema__mutations__entity_order__gallery_response_asc.snap  tyorka_admin__graphql_schema__mutations__entity_order__shop_response_asc.snap  tyorka_admin__graphql_schema__mutations__entity_order__shop_response_desc.snap  tyorka_admin__graphql_schema__mutations__save_product__pictures.snap  tyorka_admin__graphql_schema__mutations__save_product__valid.snap  tyorka_admin__graphql_schema__queries__entity_order__asc.snap  tyorka_admin__graphql_schema__queries__entity_order__gallery_desc.snap  tyorka_admin__graphql_schema__queries__entity_order__shop_asc.snap  tyorka_admin__graphql_schema__queries__entity_order__shop_desc.snap  tyorka_admin__graphql_schema__queries__picture_order__asc.snap  tyorka_admin__graphql_schema__queries__picture_order__desc.snap  tyorka_admin__graphql_schema__queries__products__by_id.snap  tyorka_admin__graphql_schema__queries__products__cover.snap  tyorka_admin__graphql_schema__queries__products__description.snap  tyorka_admin__graphql_schema__queries__products__order.snap  tyorka_admin__graphql_schema__queries__products__pictures.snap  tyorka_admin__graphql_schema__queries__products__valid.snap
src/graphql_types/: blog_post.rs  build.rs  build_status.rs  crop.rs  mod.rs  picture.rs  picture_size.rs  product.rs  product_state.rs
src/image_processing/: crop.rs  image.rs  mod.rs
src/web/: gql.rs  mod.rs  upload.rs
