[package]
edition = "2021"
name = "tyorka-admin"
version = "0.1.0"

[dependencies]
async-graphql = "4.0.13"
async-graphql-poem = "4.0.13"
async-trait = "0.1.57"
cache = {git = "https://github.com/tyorka-shop/cache.git"}
chrono = "0.4.22"
config = { path = "./config" }
constant_time_eq = "0.2.4"
dominant_color = "0.3.0"
entity = { path = "./entity" }
env_logger = "0.9.0"
eyre = "0.6.8"
image = "0.24.3"
image_processing = { path = "./image_processing" }
log = "0.4.17"
macros = { path = "./macros" }
markdown = "0.3.0"
markdown_to_text = '1.0'
md5 = "0.7.0"
poem = { version = "1.3.42", features = ["multipart", "static-files"] }
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
session_service_grpc = { git = "https://github.com/tyorka-shop/session-service-grpc.git" }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "offline", "chrono" ] }
tokio = "1.20.1"
lazy_static = "1.4.0"
subprocess = "0.2.9"
strip-ansi-escapes = "0.1.1"
insta_sync = {path = "./insta_sync"}
async-stream = "0.3.3"
futures-timer = "3.0.2"
pubsub = "0.2.3"
crossbeam-channel = "0.5.6"

[dev-dependencies]
assert-json-diff = "2.0.2"
insta = { version = "1.19.1", features = ["json"] }

[workspace]
members = [".", "config", "macros", "entity", "image_processing", "insta_sync"]
