[package]
edition = "2021"
name = "entity"
version = "0.1.0"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
eyre = "0.6.8"
macros = { path = "../macros" }
md5 = "0.7.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["serde_derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = "1.20.1"
log = "0.4.17"