[package]
edition = "2021"
name = "image_processing"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
tokio = "1.20.1"
uuid = { version = "1.1.2", features = ["v4"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
session_service_grpc = { git = "https://github.com/tyorka-shop/session-service-grpc.git" }
cache = {git = "https://github.com/tyorka-shop/cache.git"}
sqlxinsert = "0.6.0"
eyre = "0.6.8"
async-graphql = "4.0.13"
async-trait = "0.1.57"
poem = { version = "1.3.42", features = ["multipart"] }
async-graphql-poem = "4.0.13"
constant_time_eq = "0.2.4"
hex = "0.4.3"
image = "0.24.3"
md5 = "0.7.0"
rayon = "1.5.3"
dominant_color = "0.3.0"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["serde_derive"] }
markdown = "0.3.0"
markdown_to_text = '1.0'
serde_qs = "0.10.1"
reqwest = { version = "0.11.11", features = ["json"] }
futures = "0.3.24"
tokio_schedule = "0.3.0"
chrono = "0.4.22"
