[package]
edition = "2021"
name = "tyorka_insta_feed"
version = "0.1.0"

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
tokio = "1.20.1"
uuid = { version = "1.1.2", features = ["v4"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
config = { path = "../config" }
sqlxinsert = "0.6.0"
eyre = "0.6.8"
async-graphql = "4.0.13"
async-trait = "0.1.57"
poem = { version = "1.3.42", features = ["multipart"] }
async-graphql-poem = "4.0.13"
constant_time_eq = "0.2.4"
hex = "0.4.3"
image = "0.24.3"
md5 = "0.7.0"
rayon = "1.5.3"
dominant_color = "0.3.0"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["serde_derive"] }
markdown = "0.3.0"
markdown_to_text = '1.0'
tokio_schedule = "0.3.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde_qs = "0.10.1"
futures = "0.3.24"
tyorka_admin_lib = { path = "../admin"}


[dev-dependencies]
assert-json-diff = "2.0.2"
insta = { version = "1.19.1", features = ["json"] }
