[package]
edition = "2021"
name = "insta_sync"
version = "0.1.0"

[lib]
name = "insta_sync"

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
tokio = "1.20.1"
uuid = { version = "1.1.2", features = ["v4"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
config = { path = "../config" }
eyre = "0.6.8"
rayon = "1.5.3"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_qs = "0.10.1"
reqwest = { version = "0.11.11", features = ["json"] }
futures = "0.3.24"
entity = { path = "../entity" }
image_processing = { path = "../image_processing" }
